--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -65,12 +65,21 @@
                 </div>
             </nav>
         {% elif user_type == constant_ut_adminStaff %}
-            <nav class="nav d-flex">
-                <a class="p-2 text-muted active" href="{% url 'dashboard:admissions:index' %}"
-                   data-toggle="tab">Student
-                    Applications</a>
-                <a class="p-2 text-muted" href="#school_informations" data-toggle="tab">School
-                    Informations</a>
+            <nav class="nav d-flex justify-content-between">
+                <div class="nav nav-tabs d-flex justify-content-between" id="dashboard-tab"
+                     role="tablist" style="width: 100%;">
+                    {# TODO: update this    #}
+                    {# this has to be a user object and not a user_type string  #}
+                    <span class="nav-item nav-link p-2 active" id="nav-student-apps-tab"
+                          data-toggle="tab"
+                          data-url="{% url 'dashboard:admissions:index'  %}"
+                          role="tab" aria-controls="nav-student-apps-tab">Student Applications</span>
+
+{#                    todo Make this active when School Information tab is implemented#}
+{#                    <span class="nav-item nav-link p-2" id="nav-school-info-tab"#}
+{#                          data-toggle="tab"#}
+{#                          role="tab" aria-controls="nav-school-info-tab">School Information</span>#}
+                </div>
             </nav>
         {% endif %}
     </div>
