1. Make tabs clickable 2. Implement a back button tab from admin dashboard detail page to index page 3. Re-implement Program filter feature 4. Map M/F to Male Female for detailed view 5. Re-Structure JS files under static files

--- a/admissions/templates/admissions/detail.html
+++ b/admissions/templates/admissions/detail.html
@@ -1,5 +1,8 @@
 {% extends "dashboard/index.html" %}
 {% block content %}
+    <div style="width:60%; margin-top: 3%; margin-left: 7%;">
+        <a href="/dashboard/ut_admin_staff" class="btn btn-primary ">Go to List</a>
+    </div>
     <h5 style="margin: 1em; text-align: center;"><b>Application Form</b></h5>
     <table class="table table-striped" style="border: 1px solid black; border-collapse:
 inherit; width: 75%; margin: 0 auto 2em;">
