--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -5,8 +5,10 @@
     <!-- Load bootstrap css, jquery, bootstrap js -->
     <!-- common across all applications inheriting from dashboard -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+    <script src="{% static 'js/jquery-3.1.1.slim.min.js' %}"></script>
+    <script src="{% static 'js/popper.js' %}"></script>
+{#    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>#}
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <script src="https://kit.fontawesome.com/fc24e2383c.js" crossorigin="anonymous"></script>
     <!-- Custom styles for this template -->
     <link href="{% static 'dashboard/dashboard.css' %}" rel="stylesheet">
