updated test cases, fixed unauth bug

--- a/high_school/templates/high_school/broken.html
+++ b/high_school/templates/high_school/broken.html
@@ -34,7 +34,7 @@
             </a>
         </div>
         {#        default for empty list#}
-    {% else %}
+    {% elif empty_list == 1 %}
         <div class="no-school-placeholder">
             <div style="font-size: 18px;">
                     <span class="mb-3" style="font-size: 48px">
