fixed bugs, enhanced functionality for application tab

--- a/application/templates/application/application-form.html
+++ b/application/templates/application/application-form.html
@@ -6,11 +6,14 @@
 {{ form.media.css }}
 
 <div style="margin-left:20%; height: 90%; margin-bottom: 5%; width:50%; margin-top: 2%;">
+    {% if error_count_app %}
+        <h4 class="text-danger" style="font-weight: bold">{{ error_count_app }}</h4>
+    {% else %}
     <h2>High School Application Form</h2>
     <form action="{% url 'dashboard:application:new_application' %}" prog-data-url="{% url 'dashboard:application:ajax_load_programs' %}" method="post" class="form-signup" style="padding-top: 10px;">
         {% csrf_token %}
-        <div class="rounded bg-secondary" style="height:35px;margin-bottom:10px;">
-            <h5 class="p-2">PERSONAL</h5>
+        <div class="rounded bg-secondary" style="margin-bottom:10px;">
+            <h5 class="p-2">Personal</h5>
         </div>
         <div class="form-row">
             <div class="form-label-group col-md-6">
@@ -54,6 +57,9 @@
                 {% if form.date_of_birth.help_text %}
                     <p class="help">{{ form.date_of_birth.help_text|safe }}</p>
                 {% endif %}
+                {% if form.date_of_birth.errors %}
+                    {{ form.date_of_birth.errors }}
+                {% endif %}
             </div>
             <div class="form-label-group col-md-6">
                 <label for={{ form.gender.id_for_label }}>{{ form.gender.label }}</label>
@@ -88,8 +94,8 @@
                 {% endif %}
             </div>
         </div>
-        <div class="rounded bg-secondary" style="height:35px;margin-bottom:10px;margin-top:15px;">
-            <h5 class="p-2">EDUCATIONAL</h5>
+        <div class="rounded bg-secondary" style="margin-bottom:10px;margin-top:15px;">
+            <h5 class="p-2">Educational</h5>
         </div>
         <div class="form-row">
             <div class="form-label-group col-md-6">
@@ -100,11 +106,11 @@
                 {% endif %}
             </div>
         </div>
-        <div class="rounded bg-secondary" style="height:35px;margin-bottom:10px;margin-top:15px;">
-            <h5 class="p-2">SELECTED SCHOOLS AND PROGRAMS</h5>
+        <div class="rounded bg-secondary" style="margin-bottom:10px;margin-top:15px;">
+            <h5 class="p-2">Selected Schools and Programs</h5>
         </div>
         {% if program_error %}
-                <span class="text-danger">{{ program_error }}</span>
+                <ul class="errorlist"><li> {{ program_error }}</li></ul>
         {% endif %}
         <div class="form-row">
             <div class="form-label-group col-md-6">
@@ -127,6 +133,7 @@
             </div>
         </div>
     </form>
+    {% endif %}
 </div>
 
 {{ form.media.js }}
