--- a/static/application/css/application.css
+++ b/static/application/css/application.css
@@ -65,26 +65,61 @@ body {
     margin-bottom: 5% !important;
 }
 
+.rounded {
+    height: auto;
+}
+
 .form-label-group {
-  position: relative;
-  margin-bottom: 1rem;
+    position: relative;
+    margin-bottom: 1rem;
+}
+
+.form-label-group input::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: #ced4da;
+  opacity: 1; /* Firefox */
+}
+
+.form-label-group input:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  color: #ced4da;
+}
+
+-ms-input-placeholder::-ms-input-placeholder { /* Microsoft Edge */
+  color: #ced4da;
+}
+
+ul.errorlist {
+    margin: 0;
+    padding: 0;
+}
+
+.errorlist li {
+    border: 1px solid red;
+    color: red;
+    background: rgba(255, 0, 0, 0.1);
+    list-style-position: inside;
+    display: block;
+    font-size: 1em;
+    margin: 5px 0 3px;
+    padding: 4px 5px;
+    text-align: center;
+    border-radius: 3px;
 }
 
 .select2-container .select2-selection--single {
-    display: block;
     line-height: 1.5;
     height: 37px !important;
-    width: 375px !important;
+    width: inherit;
     padding: 3px 6px 3px 6px;
     border: 1px solid #ced4da;
-    color: #7b8a8b;
+    color: #7b8a8b !important;
 }
 
 .select2-container{
     color: #7b8a8b;
-    font-size: 15px;
+    font-size: 13.333px;
     font-weight: normal;
-    font-family: Sans-Serif;
+    font-family: Arial;
+    width: inherit !important;
 }
 
 select2 {
@@ -92,10 +127,8 @@ select2 {
 }
 
 .select2-selection__rendered .select2-selection .select2-selection--single {
-    width: 100%;
     font-weight: normal;
-    font-size: 15px;
-    display: block;
+    font-size: 13.333px;
     white-space: pre;
     min-height: 1.2em;
     line-height: 1.5;
@@ -106,9 +139,13 @@ select2 {
     margin-top: 3px;
 }
 
-span.select2-container--default .select2-selection--single .select2-selection__rendered {
+.select2-container--default .select2-selection--single {
     color: #7b8a8b;
     font-family: Arial;
-    font-weight: lighter;
+    font-weight: normal;
     font-size: 15px;
+}
+
+#select2-school-container {
+        color: #7b8a8b;
 }
