--- a/admissions/templates/admissions/index.html
+++ b/admissions/templates/admissions/index.html
@@ -18,8 +18,8 @@
 
                 {% if programs %}
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                    <a class="dropdown-item"
-                               href="{% url "dashboard:admissions:index" %}">ALL</a>
+                        <a class="dropdown-item"
+                           href="{% url "dashboard:admissions:index" %}">ALL</a>
                         {% for program in programs %}
                             <a class="dropdown-item"
                                href="{% url "dashboard:admissions:index" %}?p={{ program.id }}">{{ program.name }}</a>
@@ -29,88 +29,96 @@
             </div>
             {% for app in applications %}
                 {% if app.application_status == 2 %}
-                 <div class="card"
-                     style="margin-top: 3em; margin-left: 17em; margin-right: 17em; background-color: #F9F7F3">
-                    <div class="card-header" style="background-color: #CDE6EC"><b>
-                        {{ app.first_name }} {{ app.last_name }}
-                        <span style="float: right">{{ app.application_number }}/Pending
+                    <div class="card"
+                         style="margin-top: 3em; margin-left: 17em; margin-right: 17em; background-color: #F9F7F3">
+                        <div class="card-header" style="background-color: #CDE6EC"><b>
+                            {{ app.first_name }} {{ app.last_name }}
+                            <span style="float: right">{{ app.application_number }}/Pending
                     </span>
-                    </b>
-                    </div>
-                    <div class="card-body">
-                        <div class="card-text" style="align-items: center;">
+                        </b>
+                        </div>
+                        <div class="card-body">
+                            <div class="card-text" style="align-items: center;">
                             <span>
                                 Program: {{ app.program }}
                             </span>
-                            <span style="float: right">
+                                <span style="float: right">
                                 <a href="{% url 'dashboard:admissions:detail' app.id %}"
                                    class="btn btn-primary"
                                 >View Application</a>
                             </span>
-                            <footer class="blockquote-footer"
-                                    style="margin-top:1em;">Date of Submission:
-                                {{ app.submitted_date }}
-                            </footer>
+                                <footer class="blockquote-footer"
+                                        style="margin-top:1em;">Date of Submission:
+                                    {{ app.submitted_date }}
+                                </footer>
+                            </div>
                         </div>
                     </div>
-                 </div>
                 {% elif app.application_status == 1 %}
-                 <div class="card"
-                     style="margin-top: 3em; margin-left: 17em; margin-right: 17em; background-color: #F9F7F3">
-                    <div class="card-header" style="background-color: #b3e6b3"><b>
-                        {{ app.first_name }} {{ app.last_name }}
-                        <span style="float: right">{{ app.application_number }}/Accepted
+                    <div class="card"
+                         style="margin-top: 3em; margin-left: 17em; margin-right: 17em; background-color: #F9F7F3">
+                        <div class="card-header" style="background-color: #b3e6b3"><b>
+                            {{ app.first_name }} {{ app.last_name }}
+                            <span style="float: right">{{ app.application_number }}/Accepted
                     </span>
-                    </b>
-                    </div>
-                    <div class="card-body">
-                        <div class="card-text" style="align-items: center;">
+                        </b>
+                        </div>
+                        <div class="card-body">
+                            <div class="card-text" style="align-items: center;">
                             <span>
                                 Program: {{ app.program }}
                             </span>
-                            <span style="float: right">
+                                <span style="float: right">
                                 <a href="{% url 'dashboard:admissions:detail' app.id %}"
                                    class="btn btn-primary"
                                 >View Application</a>
                             </span>
-                            <footer class="blockquote-footer"
-                                    style="margin-top:1em;">Date of Submission:
-                                {{ app.submitted_date }}
-                            </footer>
+                                <footer class="blockquote-footer"
+                                        style="margin-top:1em;">Date of Submission:
+                                    {{ app.submitted_date }}
+                                </footer>
+                            </div>
                         </div>
                     </div>
-                 </div>
                 {% elif app.application_status == 0 %}
-                 <div class="card"
-                     style="margin-top: 3em; margin-left: 17em; margin-right: 17em; background-color: #F9F7F3">
-                    <div class="card-header" style="background-color: #ffcccc"><b>
-                        {{ app.first_name }} {{ app.last_name }}
-                        <span style="float: right">{{ app.application_number }}/Rejected
+                    <div class="card"
+                         style="margin-top: 3em; margin-left: 17em; margin-right: 17em; background-color: #F9F7F3">
+                        <div class="card-header" style="background-color: #ffcccc"><b>
+                            {{ app.first_name }} {{ app.last_name }}
+                            <span style="float: right">{{ app.application_number }}/Rejected
                     </span>
-                    </b>
-                    </div>
-                    <div class="card-body">
-                        <div class="card-text" style="align-items: center;">
+                        </b>
+                        </div>
+                        <div class="card-body">
+                            <div class="card-text" style="align-items: center;">
                             <span>
                                 Program: {{ app.program }}
                             </span>
-                            <span style="float: right">
+                                <span style="float: right">
                                 <a href="{% url 'dashboard:admissions:detail' app.id %}"
                                    class="btn btn-primary"
                                 >View Application</a>
                             </span>
-                            <footer class="blockquote-footer"
-                                    style="margin-top:1em;">Date of Submission:
-                                {{ app.submitted_date }}
-                            </footer>
+                                <footer class="blockquote-footer"
+                                        style="margin-top:1em;">Date of Submission:
+                                    {{ app.submitted_date }}
+                                </footer>
+                            </div>
                         </div>
                     </div>
-                 </div>
                 {% endif %}
             {% endfor %}
 
         {% else %}
-            <p>No applications are available.</p>
+            {% if unauth %}
+                {% block broken %}
+                    {% include 'admissions/broken.html' %}
+                {% endblock %}
+            {% elif not applications %}
+                {% block empty_list %}
+                    {% include 'admissions/broken.html' %}
+                {% endblock %}
+            {% endif %}
         {% endif %}
     {% endif %}
 {% endblock %}
