1. Updated test cases 2. Handled edge cases for the type of user who has logged in

--- a/admissions/templates/admissions/broken.html
+++ b/admissions/templates/admissions/broken.html
@@ -16,7 +16,7 @@
 {% endblock %}
 {% block empty_list %}
     {#    for empty applications list #}
-    {% if not applications %}
+    {% if not unauth and not applications %}
         <div class="no-school-placeholder">
             <div style="font-size: 18px;">
                     <span class="mb-3" style="font-size: 48px">
