added text field for custom recommendation, changed how submitted already submitted and nonexisting recommendation pages are shown

--- a/recommendation/templates/recommendation/index.html
+++ b/recommendation/templates/recommendation/index.html
@@ -3,6 +3,7 @@
 {% block all_recommendations %}
 
     {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'recommendation/css/recommendation.css' %}">
 
     <div class="all-app-root">
