--- a/recommendation/templates/recommendation/recommendation_form.html
+++ b/recommendation/templates/recommendation/recommendation_form.html
@@ -2,6 +2,7 @@
 {% block recommend_form %}
 
 {% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'recommendation/css/recommendation.css' %}">
 
 <div style="margin-left:20%;height: 90%; margin-bottom: 5%; width:50%; margin-top: 2%;">
@@ -25,6 +26,7 @@
                 {% endif %}
             </div>
             <div class="form-label-group col-md-12">
+                <br>
                 <label for={{ form.email_address.id_for_label }}>{{ form.email_address.label }}</label>
                 {{ form.email_address }}
                 {% if form.email_address.errors %}
@@ -32,6 +34,7 @@
                 {% endif %}
             </div>
         </div>
+        <br>
         <input class="btn btn-primary" type="submit" value="Submit" name="submit"/>
         <div class="form-row" style="margin-top:50px;">
              {% if messages %}
