--- a/static/register/css/register.css
+++ b/static/register/css/register.css
@@ -166,3 +166,12 @@ body {
     text-overflow: ellipsis;
     white-space: nowrap;
 }
+
+.select2-container {
+    box-sizing: border-box;
+    display: inline-block;
+    margin: 0;
+    position: relative;
+    vertical-align: middle;
+    width: 100% !important;
+}
