Changed email notification messages Fixed scroll issue when dropdown is selected

--- a/register/templates/register/after_register.html
+++ b/register/templates/register/after_register.html
@@ -9,7 +9,7 @@
                 address
                 to complete registration.
             {% else %}
-                An email has been sent to the supervisor contact you have provided. Once
+                An email has been sent to the supervisor contact we have on file. Once
                 they are able to verify your employment then you will receive a separate
                 email with instructions on activating your account
             {% endif %}
