--- a/high_school/templates/high_school/broken.html
+++ b/high_school/templates/high_school/broken.html
@@ -17,36 +17,36 @@
 {% block empty_list %}
     {#    for empty fav list #}
     {% if empty_list == 2 %}
-        <div class="no-school-placeholder">
-            <div style="font-size: 18px;">
+        <div class="empty_search_filter_div">
+            <div style="font-size: 18px; display: none;">
                     <span class="mb-3" style="font-size: 48px">
                         <i class="far fa-folder-open fa-5x"></i>
                     </span>
             </div>
-            <p class="mt-5" style="font-size: 18px;">
+            <p class="mt-2 mb-1" style="font-size: 18px;">
                 Your favorites will appear here.</p>
             <p>Use the heart icon to add/remove a high school from your favorites.
             </p>
             <small class="pt-1">Contact oneapply_teamthree@gmail.com for more assistance.</small>
             <a href="{% url 'dashboard:high_school:index' %}">
-                <button class="btn btn-lg btn-primary mt-4 mb-4">Add Favorites
+                <button class="btn btn-primary mt-4 mb-4">Add Favorites
                 </button>
             </a>
         </div>
         {#        default for empty list#}
     {% elif empty_list == 1 %}
-        <div class="no-school-placeholder">
-            <div style="font-size: 18px;">
-                    <span class="mb-3" style="font-size: 48px">
-                        <i class="fa fa-unlink fa-5x"></i>
+        <div class="empty_search_filter_div">
+            <div style="font-size: 18px; display: none;">
+                    <span class="mb-3" style="font-size: 48px;">
+                        <i class="fa fa-frown-o fa-5x"></i>
                     </span>
             </div>
-            <p class="mt-5" style="font-size: 18px;">
+            <p class="mt-2 mb-1" style="font-size: 18px;">
                 Oops! We couldn't find what you're looking for...
             </p>
             <small class="pt-1">Contact oneapply_teamthree@gmail.com if the problem persists.</small>  {# noqa: E501 #}
             <a href="{% url 'dashboard:high_school:index' %}">
-                <button class="btn btn-lg btn-primary mt-4 mb-4">Home
+                <button class="btn btn-primary mt-4 mb-4">List all schools
                 </button>
             </a>
         </div>
